// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account handle filters and obligations poperly 1`] = `
Array [
  Object {
    "activated": false,
    "id": 1,
    "position": null,
  },
  Object {
    "activated": true,
    "id": 2,
    "position": 1,
  },
]
`;

exports[`Account handle filters and obligations poperly 2`] = `
Array [
  Object {
    "activated": true,
    "id": 1,
  },
  Object {
    "activated": false,
    "id": 2,
  },
]
`;
